--- a/styles/header.css
+++ b/styles/header.css
@@ -14,4 +14,12 @@
     display: none;
 }
 
+@media screen and (min-width: 1024px) {
+    .cabecalho-titulo {
+        display: flex;
+    }
 
+    .cabecalho-imagem-transparente {
+        display: none;
+    }
+}
