--- a/styles/header.css
+++ b/styles/header.css
@@ -50,6 +50,10 @@
     color: var(--azul-degrade);
 }
 
+.menu-titulo{
+    color: var(--laranja);
+}
+
 @media screen and (min-width: 1024px) {
     .cabecalho-titulo {
         display: flex;
