--- a/styles/header.css
+++ b/styles/header.css
@@ -58,6 +58,10 @@
     display: none;
 }
 
+.container-titulo-negrito {
+    font-weight: 700;
+}
+
 @media screen and (min-width: 1024px) {
     .cabecalho-titulo {
         display: flex;
