--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 :root {
     --cor-de-fundo: #EBECEE;
     --branco: #FFFFFF;
-    --azul-degrade: #326589;
+    --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
     --laranja: #EB9B00;
     --fonte-principal: "Poppins";
 }
