--- a/styles/banner.css
+++ b/styles/banner.css
@@ -18,6 +18,9 @@
 .banner-pesquisa {
     background-color: transparent;
     border: 1px solid var(--branco);
-    color: var(--branco);
     border-radius: 24px;
+}
+
+.banner-pesquisa::placeholder {
+    color: var(--branco);
 }
