--- a/styles/banner.css
+++ b/styles/banner.css
@@ -19,6 +19,8 @@
     background-color: transparent;
     border: 1px solid var(--branco);
     border-radius: 24px;
+    padding: 1em;
+    width: 100%;
 }
 
 .banner-pesquisa::placeholder {
