--- a/styles/banner.css
+++ b/styles/banner.css
@@ -25,4 +25,7 @@
 
 .banner-pesquisa::placeholder {
     color: var(--branco);
+    font-family: var(--fonte-principal);
+    font-size: 14px;
+    font-weight: 400;
 }
