--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 :root {
     --cor-de-fundo: #EBECEE;
     --branco: #FFFFFF;
-    --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
+    --azul-degrade: #002F52;
     --laranja: #EB9B00;
     --fonte-principal: "Poppins";
 }
